# llm-tool-fusion

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: GUIA_USO_PT.md  USAGE_GUIDE_EN.md  example_all_functions.py  external_tools.py  tools.py  using_openai_tools.py
examples/ollama/: tool_calls_comparison.py  tool_calls_processing_comparison.py
examples/openai/: async_tools_comparison.py  async_tools_comparison_with_processing.py  tool_definition_comparison.py  tools_comparison.py  tools_comparison_with_processing.py
llm-tool-fusion/: __init__.py  _core.py  _utils.py
llm_tool_fusion/: __init__.py  _core.py  _utils.py
tests/: test_core.py  test_init.py  test_utils.py
