[project]
name = "llm-tool-fusion"
version = "0.2.2"
description = "Biblioteca Python que simplifica e unifica a definição e chamada de ferramentas para grandes modelos de linguagem (LLMs). Compatível com Ollama, LangChain, OpenAI e outros frameworks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview=true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']
ignore = ["D100", "D104", "E402", "PLR0913", "PLR0917", "PLR1702", "PLR0914", "PLR0915", "PLR0912", "PLW2901"]

[tool.ruff.format]
preview=true


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath= "."